# fiap-tech-challenge-04

./: .gitignore  LICENSE  README.md  activity_detector.py  anomaly_detector.py  config.py  face_detector.py  pyproject.toml  requirements.txt  summary_generator.py  utils.py
.specify/memory/: constitution.md
.windsurf/rules/: specify-rules.md
specs/001-add-src-folder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-add-src-folder/checklists/: requirements.md
specs/001-add-src-folder/contracts/: module-interfaces.md
specs/001-video-facial-analysis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-video-facial-analysis/checklists/: requirements.md
specs/001-video-facial-analysis/contracts/: module-interfaces.md
specs/002-portuguese-annotations/: plan.md  spec.md  tasks.md
specs/002-portuguese-annotations/checklists/: requirements.md
specs/004-fer-emotion-detection/: plan.md  spec.md  tasks.md
specs/004-fer-emotion-detection/checklists/: requirements.md
src/: __init__.py  activity_detector.py  anomaly_detector.py  config.py  emotion_analyzer.py  emotion_analyzer_deepface.py  face_detector.py  main.py  summary_generator.py  utils.py  video_processor.py
