[project]
name = "video-facial-analysis"
version = "1.0.0"
description = "Sistema de Análise de Expressões Faciais em Vídeo - FIAP Tech Challenge Fase 4"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "tensorflow>=2.14.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
